--- a/RtlSdr-Shell/src/app/mappa/mappa.component.css
+++ b/RtlSdr-Shell/src/app/mappa/mappa.component.css
@@ -1,55 +1,33 @@
 @import "../../../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 
-:host {
-    display: flex;
-    height: 100%;
-}
-
-html, body{
-    margin-top: 0px;
-    margin-bottom: 0px;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
-
 .div{
-    margin-top: 0px;
-    margin-bottom: 0px;
-    height: 100%;
-    width: 100%;
-    display: flex;
+    height: 95vh;
+    width: 100vw;
 }
 
 .mappaDiv{
     margin-top: 1vh;
-    margin-bottom: 1vh;
-    margin-left: 1%;
-    margin-right: 1%;
+    margin-left: 1vw;
+    margin-right: 1vw;
     height: 94vh;
-    max-height: 94vh;
-    width: 78%;
+    width: 78vw;
     display: inline-block;
+    float: left;
 }
 
 .seleziobatoDiv{
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-right: 0px;
+    margin-top: 1vh;
     height: 94vh;
-    max-height: 94vh;
-    width: 20%;
-    max-height: 90%;
+    width: 20vw;
     display: inline-block;
     text-align: center;
+    float: left;
 }
 
 .PuntoNonSelezionato{
-    margin-top: 40vh;
-    margin-bottom: 0px;
-    height: 94vh;
-    width: 100%;
+    margin-top: 42vh;
+    height: 50vh;
+    width: 20vw;
     text-align: center;
 }
 
@@ -59,15 +37,26 @@ html, body{
     color: red;
 }
 
+.divSelezionato{
+    width: 20vw;
+    display: flex;
+    flex-flow: column;
+    height: 94vh;
+}
+
+.intestazione{
+    flex: 0 1 auto;
+}
+
 .filtri{
     text-align: left;
     width: 100%;
-    height: fit-content;
+    flex: 0 1 auto;
 }
 
 .divBottoneFiltro{
     text-align: left;
-    width: 100%;
+    width: 98%;
     height: fit-content;
 }
 
@@ -77,28 +66,23 @@ html, body{
     margin-right: 1%;
     margin-bottom: 2%;
     margin-left: 1%;
-    width: 99%;
+    width: 98%;
 }
 
 .divLetture{
     margin-top: 1%;
-    margin-bottom: 1%;
     margin-right: 1%;
     text-align: center;
-    width: 99%;
-    height: 75vh;
+    width: 98%;
+    flex: 1 1 auto;
     overflow: auto;
-}
-
-.divSelezionato{
-    margin-top: 1%;
 }
 
 .selectFiltro{
     text-align: center;
     height: auto;
     width: 70%;
-    height: 2vw;
+    height: 2vh;
     font-weight: bold;
     border-radius: 7px;
     font-size: medium;
