--- a/RtlSdr-Shell/src/app/mappa/mappa.component.html
+++ b/RtlSdr-Shell/src/app/mappa/mappa.component.html
@@ -3,7 +3,7 @@
     <div class="mappaDiv">
       <google-map #map
       height="94vh"
-      width="100%"
+      width="78vw"
       [center]="center"
       [zoom]="zoom"
       (mapInitialized)="handleMapInitializad($event)"
@@ -21,9 +21,11 @@
       }
       @if (Selezionato) {
         <div class="divSelezionato">
-          <h2>Posizione selezionata</h2>
-          <h3>Latitudine: {{Latitudine}}</h3>
-          <h3>Longitudine: {{Longitudine}}</h3>
+          <div class="intestazione">
+            <h2>Posizione selezionata</h2>
+            <h3>Latitudine: {{Latitudine}}</h3>
+            <h3>Longitudine: {{Longitudine}}</h3>
+          </div>
           <div class="filtri">
             <mat-divider></mat-divider>
             <div class="divBottoneFiltro">
@@ -39,25 +41,25 @@
                 </select>
               </div>
             }
-            <mat-divider></mat-divider>
-            <div class="divLetture">
-              @for (lettura of letture; track lettura) {
-                <mat-card>
-                  <mat-card-header>
-                    <mat-card-title>ID: {{lettura.id}}</mat-card-title>
-                    <mat-card-subtitle>{{lettura.data}}</mat-card-subtitle>
-                  </mat-card-header>
-                  <mat-card-content>
-                    <p>Frequenza iniziale: {{lettura.frequenzaIniziale}}</p>
-                    <p>FrequenzaFinale: {{lettura.frequenzaFinale}}</p>
-                  </mat-card-content>
-                  <mat-card-actions align="end">
-                    <button mat-raised-button color="primary" (click)="vedi(lettura.id)">VEDI</button>
-                    <mat-divider></mat-divider>
-                  </mat-card-actions>
-                </mat-card>
-              }
-            </div>
+          </div>
+          <mat-divider></mat-divider>
+          <div class="divLetture">
+            @for (lettura of letture; track lettura) {
+              <mat-card>
+                <mat-card-header>
+                  <mat-card-title>ID: {{lettura.id}}</mat-card-title>
+                  <mat-card-subtitle>{{lettura.data}}</mat-card-subtitle>
+                 </mat-card-header>
+                <mat-card-content>
+                  <p>Frequenza iniziale: {{lettura.frequenzaIniziale}}</p>
+                  <p>FrequenzaFinale: {{lettura.frequenzaFinale}}</p>
+                </mat-card-content>
+                <mat-card-actions align="end">
+                  <button mat-raised-button color="primary" (click)="vedi(lettura.id)">VEDI</button>
+                  <mat-divider></mat-divider>
+                </mat-card-actions>
+              </mat-card>
+            }
           </div>
         </div>
       }
