--- a/RtlSdr-Shell/src/app/menu/menu.component.css
+++ b/RtlSdr-Shell/src/app/menu/menu.component.css
@@ -1,14 +1,6 @@
-html, body{
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
 .menu{
     height: 100vh;
-    width: 100%;
+    width: 100vw;
     overflow: hidden;
 }
 
