--- a/RtlSdr-Shell/src/app/menu/menu.component.html
+++ b/RtlSdr-Shell/src/app/menu/menu.component.html
@@ -1,4 +1,14 @@
 <mat-tab-group class="menu">
-    <mat-tab label="Mappa"><app-mappa class="mappa"></app-mappa></mat-tab>
-    <mat-tab label="Tabella"><app-tabella class="tabella"></app-tabella></mat-tab>
+    <mat-tab label="Mappa"><app-mappa class="mappa">
+        <ng-template mat-tab-label>
+            <label><h2>Mappa</h2></label>
+        </ng-template>
+        </app-mappa>
+    </mat-tab>
+    <mat-tab label="Tabella"><app-tabella class="tabella">
+        <ng-template mat-tab-label>
+            <label><h2>Tabella</h2></label>
+        </ng-template>
+    </app-tabella>
+    </mat-tab>
 </mat-tab-group>
